--- a/notebook_a_drop_a_la_fin.ipynb
+++ b/notebook_a_drop_a_la_fin.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,12 +13,13 @@
     "import requests\n",
     "import scipy.io\n",
     "from principal_RBM_alpha import RBM\n",
-    "from principal_DBN_alpha import DBN"
+    "from principal_DBN_alpha import DBN\n",
+    "from principal_DNN_MNIST import DNN"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -27,7 +28,7 @@
        "'\\nurl = \"https://www.cs.nyu.edu/~roweis/data/binaryalphadigs.mat\"\\nr = requests.get(url, allow_redirects=True)\\nopen(\\'binaryalphadigs.mat\\', \\'wb\\').write(r.content)\\n'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -42,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -812,6 +813,103 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from mlxtend.data import loadlocal_mnist\n",
+    "\n",
+    "X_train, y_train = loadlocal_mnist(images_path='data/train-images.idx3-ubyte',\n",
+    "                         labels_path='data/train-labels.idx1-ubyte')\n",
+    "X_test, y_test = loadlocal_mnist(images_path='data/t10k-images.idx3-ubyte',\n",
+    "                         labels_path='data/t10k-labels.idx1-ubyte')\n",
+    "\n",
+    "# Binarisation of our data\n",
+    "X_train = (X_train >= 127).astype(int)\n",
+    "X_test = (X_test >= 127).astype(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/agatheminaro/Documents/Master IP Paris/Semestre 2/Deep Learning II/Project/from-rbm-to-dnn/principal_RBM_alpha.py:14: RuntimeWarning: overflow encountered in exp\n",
+      "  return 1 / (1 + np.exp(-X @ self.RBM_W + self.RBM_b))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "391.92171046619177\n",
+      "464.19685229898147\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/agatheminaro/Documents/Master IP Paris/Semestre 2/Deep Learning II/Project/from-rbm-to-dnn/principal_RBM_alpha.py:17: RuntimeWarning: overflow encountered in exp\n",
+      "  return 1 / (1 + np.exp(-H @ self.RBM_W.T + self.RBM_a))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "467.1603724390542\n",
+      "461.00529440344997\n",
+      "478.31304242634377\n",
+      "469.2138634941156\n",
+      "471.72133322271\n",
+      "468.26571559059755\n",
+      "472.9158104710097\n",
+      "469.6520251746603\n",
+      "468.8834038425502\n",
+      "470.5153402295823\n",
+      "470.2642927584579\n",
+      "467.86176922319873\n",
+      "466.93737691588547\n",
+      "467.2465748941454\n",
+      "467.7971443746161\n",
+      "465.84818177812554\n",
+      "466.9648200089286\n",
+      "470.45095182901434\n",
+      "467.3044203342652\n",
+      "465.21403056429915\n",
+      "466.60405214711676\n",
+      "465.01071917051456\n",
+      "466.06017671246957\n",
+      "467.76713818636404\n",
+      "466.4077032073886\n",
+      "466.2891279598363\n",
+      "465.8586038543236\n",
+      "465.20118045191236\n",
+      "464.4621991215406\n"
+     ]
+    }
+   ],
+   "source": [
+    "dnn = DNN(config=[784, 100, 50, 10])\n",
+    "dnn.pretrain_DNN(X=X_train, epsilon=0.1, batch_size=32, nb_epochs=100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "loss = dnn.retropropagation(X=X_train, y=y_train, epsilon=0.1, batch_size=32, nb_epochs=200)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -820,7 +918,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12",
+   "display_name": "Python 3.10.9",
    "language": "python",
    "name": "python3"
   },
@@ -834,12 +932,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.10.9"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "40d3a090f54c6569ab1632332b64b2c03c39dcf918b08424e98f38b5ae0af88f"
+    "hash": "4b2890d1c783b7a1ad1bb7cd25b435063d8d6969f5a3a8d1bf7db35c9e56c2c0"
    }
   }
  },
