--- a/notebook_a_drop_a_la_fin.ipynb
+++ b/notebook_a_drop_a_la_fin.ipynb
@@ -918,7 +918,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.9",
+   "display_name": "Python 3.10.9 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -937,7 +937,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "4b2890d1c783b7a1ad1bb7cd25b435063d8d6969f5a3a8d1bf7db35c9e56c2c0"
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
    }
   }
  },
