--- a/mnist_study.ipynb
+++ b/mnist_study.ipynb
@@ -14,54 +14,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install mlxtend --quiet"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Bad key text.latex.preview in file /opt/anaconda3/lib/python3.9/site-packages/matplotlib/mpl-data/stylelib/_classic_test.mplstyle, line 123 ('text.latex.preview : False')\n",
-      "You probably need to get an updated matplotlibrc file from\n",
-      "https://github.com/matplotlib/matplotlib/blob/v3.5.1/matplotlibrc.template\n",
-      "or from the matplotlib source distribution\n",
-      "\n",
-      "Bad key mathtext.fallback_to_cm in file /opt/anaconda3/lib/python3.9/site-packages/matplotlib/mpl-data/stylelib/_classic_test.mplstyle, line 155 ('mathtext.fallback_to_cm : True  # When True, use symbols from the Computer Modern')\n",
-      "You probably need to get an updated matplotlibrc file from\n",
-      "https://github.com/matplotlib/matplotlib/blob/v3.5.1/matplotlibrc.template\n",
-      "or from the matplotlib source distribution\n",
-      "\n",
-      "Bad key savefig.jpeg_quality in file /opt/anaconda3/lib/python3.9/site-packages/matplotlib/mpl-data/stylelib/_classic_test.mplstyle, line 418 ('savefig.jpeg_quality: 95       # when a jpeg is saved, the default quality parameter.')\n",
-      "You probably need to get an updated matplotlibrc file from\n",
-      "https://github.com/matplotlib/matplotlib/blob/v3.5.1/matplotlibrc.template\n",
-      "or from the matplotlib source distribution\n",
-      "\n",
-      "Bad key keymap.all_axes in file /opt/anaconda3/lib/python3.9/site-packages/matplotlib/mpl-data/stylelib/_classic_test.mplstyle, line 466 ('keymap.all_axes : a                 # enable all axes')\n",
-      "You probably need to get an updated matplotlibrc file from\n",
-      "https://github.com/matplotlib/matplotlib/blob/v3.5.1/matplotlibrc.template\n",
-      "or from the matplotlib source distribution\n",
-      "\n",
-      "Bad key animation.avconv_path in file /opt/anaconda3/lib/python3.9/site-packages/matplotlib/mpl-data/stylelib/_classic_test.mplstyle, line 477 ('animation.avconv_path: avconv     # Path to avconv binary. Without full path')\n",
-      "You probably need to get an updated matplotlibrc file from\n",
-      "https://github.com/matplotlib/matplotlib/blob/v3.5.1/matplotlibrc.template\n",
-      "or from the matplotlib source distribution\n",
-      "\n",
-      "Bad key animation.avconv_args in file /opt/anaconda3/lib/python3.9/site-packages/matplotlib/mpl-data/stylelib/_classic_test.mplstyle, line 479 ('animation.avconv_args:            # Additional arguments to pass to avconv')\n",
-      "You probably need to get an updated matplotlibrc file from\n",
-      "https://github.com/matplotlib/matplotlib/blob/v3.5.1/matplotlibrc.template\n",
-      "or from the matplotlib source distribution\n"
-     ]
-    }
-   ],
-   "source": [
     "from principal_DNN_MNIST import DNN\n",
-    "from mlxtend.data import loadlocal_mnist"
+    "from download_data import mnist_data\n",
+    "import matplotlib.pyplot as plt\n",
+    "from utils import subsample_data_set"
    ]
   },
   {
@@ -73,18 +29,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train, y_train = loadlocal_mnist(images_path='/Users/solenedebuysere/Desktop/deep2-git/data/train-images',\n",
-    "                                   labels_path='/Users/solenedebuysere/Desktop/deep2-git/data/train-labels')\n",
-    "X_test, y_test = loadlocal_mnist(images_path='/Users/solenedebuysere/Desktop/deep2-git/data/t10k-images',\n",
-    "                                 labels_path='/Users/solenedebuysere/Desktop/deep2-git/data/t10k-labels')\n",
-    "\n",
-    "# Binarisation of our data\n",
-    "X_train = (X_train >= 127).astype(int)\n",
-    "X_test = (X_test >= 127).astype(int)"
+    "X_train, X_test, y_train, y_test = mnist_data(path=\"data/\")"
    ]
   },
   {
@@ -96,49 +45,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "CONFIG = [784, 100, 50, 10]\n",
-    "BATCH_SIZE = 320\n",
+    "CONFIG = [784, 100, 10]\n",
+    "BATCH_SIZE = 32\n",
     "EPSILON = 0.1\n",
     "NB_EPOCHS_RBM = 100\n",
-    "NB_EPOCHS_DNN = 200"
+    "NB_EPOCHS_DNN = 200\n",
+    "NB_DATA_TRAINING = None"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "exp() got an unexpected keyword argument 'keepdims'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[5], line 8\u001b[0m\n\u001b[1;32m      5\u001b[0m dnn\u001b[39m.\u001b[39mpretrain_DNN(X_train, epsilon\u001b[39m=\u001b[39mEPSILON, batch_size\u001b[39m=\u001b[39mBATCH_SIZE, nb_epochs\u001b[39m=\u001b[39mNB_EPOCHS_RBM)\n\u001b[1;32m      7\u001b[0m \u001b[39m# Train the model\u001b[39;00m\n\u001b[0;32m----> 8\u001b[0m loss \u001b[39m=\u001b[39m dnn\u001b[39m.\u001b[39;49mretropropagation(X_train, y_train, epsilon\u001b[39m=\u001b[39;49mEPSILON, batch_size\u001b[39m=\u001b[39;49mBATCH_SIZE, nb_epochs\u001b[39m=\u001b[39;49mNB_EPOCHS_DNN)\n\u001b[1;32m     10\u001b[0m \u001b[39m# Test the model\u001b[39;00m\n\u001b[1;32m     11\u001b[0m dnn\u001b[39m.\u001b[39mtest_dnn(X_test, y_test)\n",
-      "File \u001b[0;32m~/Desktop/deep2-git/from-rbm-to-dnn/principal_DNN_MNIST.py:42\u001b[0m, in \u001b[0;36mDNN.retropropagation\u001b[0;34m(self, X, y, epsilon, batch_size, nb_epochs)\u001b[0m\n\u001b[1;32m     40\u001b[0m y_batch \u001b[39m=\u001b[39m y_copy[batch : \u001b[39mmin\u001b[39m(batch \u001b[39m+\u001b[39m batch_size, X_copy\u001b[39m.\u001b[39mshape[\u001b[39m0\u001b[39m])]\n\u001b[1;32m     41\u001b[0m true_batch_size \u001b[39m=\u001b[39m X_batch\u001b[39m.\u001b[39mshape[\u001b[39m0\u001b[39m]\n\u001b[0;32m---> 42\u001b[0m sortie_list \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mentree_sortie_reseau(X_batch)\n\u001b[1;32m     43\u001b[0m last_layer \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mRBM_list[\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m]\n\u001b[1;32m     44\u001b[0m delta_sortie \u001b[39m=\u001b[39m sortie_list[\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m] \u001b[39m-\u001b[39m y_batch\n",
-      "File \u001b[0;32m~/Desktop/deep2-git/from-rbm-to-dnn/principal_DNN_MNIST.py:29\u001b[0m, in \u001b[0;36mDNN.entree_sortie_reseau\u001b[0;34m(self, X)\u001b[0m\n\u001b[1;32m     27\u001b[0m     sortie \u001b[39m=\u001b[39m rbm\u001b[39m.\u001b[39mentree_sortie_RBM(sortie_list[\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m])\n\u001b[1;32m     28\u001b[0m     sortie_list\u001b[39m.\u001b[39mappend(sortie)\n\u001b[0;32m---> 29\u001b[0m sortie_list\u001b[39m.\u001b[39mappend(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mcalcul_softmax(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mdbn\u001b[39m.\u001b[39;49mRBM_list[\u001b[39m-\u001b[39;49m\u001b[39m1\u001b[39;49m], sortie_list[\u001b[39m-\u001b[39;49m\u001b[39m1\u001b[39;49m]))\n\u001b[1;32m     30\u001b[0m \u001b[39mreturn\u001b[39;00m sortie_list\n",
-      "File \u001b[0;32m~/Desktop/deep2-git/from-rbm-to-dnn/principal_DNN_MNIST.py:15\u001b[0m, in \u001b[0;36mDNN.calcul_softmax\u001b[0;34m(self, rbm, X)\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mcalcul_softmax\u001b[39m(\u001b[39mself\u001b[39m, rbm, X):\n\u001b[1;32m     14\u001b[0m     Z \u001b[39m=\u001b[39m X \u001b[39m@\u001b[39m rbm\u001b[39m.\u001b[39mRBM_W \u001b[39m+\u001b[39m rbm\u001b[39m.\u001b[39mRBM_b\n\u001b[0;32m---> 15\u001b[0m     e_x \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39;49mexp(Z\u001b[39m-\u001b[39;49mnp\u001b[39m.\u001b[39;49mmax(Z), keepdims\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m)\n\u001b[1;32m     16\u001b[0m     \u001b[39mreturn\u001b[39;00m e_x \u001b[39m/\u001b[39m np\u001b[39m.\u001b[39msum(e_x, axis\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m, keepdims\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\n",
-      "\u001b[0;31mTypeError\u001b[0m: exp() got an unexpected keyword argument 'keepdims'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training DBN with 2 RBM(s)\n",
+      "Training RBM 1 / 2\n",
+      "  Epoch 60/100 : RMSE = 15.543095188516343\r"
      ]
     }
    ],
    "source": [
     "# Create the model\n",
-    "dnn = DNN(config=[784, 100, 50, 10])\n",
+    "dnn = DNN(config=CONFIG)\n",
     "\n",
-    "# Pretrain the model\n",
-    "dnn.pretrain_DNN(X_train, epsilon=EPSILON, batch_size=BATCH_SIZE, nb_epochs=NB_EPOCHS_RBM)\n",
+    "dnn, losses = dnn.pretrain_DNN(X_train, epsilon=EPSILON, batch_size=BATCH_SIZE, nb_epochs=NB_EPOCHS_RBM, verbose=True)\n",
     "\n",
-    "# Train the model\n",
-    "loss = dnn.retropropagation(X_train, y_train, epsilon=EPSILON, batch_size=BATCH_SIZE, nb_epochs=NB_EPOCHS_DNN)\n",
+    "dnn, loss = dnn.retropropagation(X_train, y_train, epsilon=EPSILON, batch_size=BATCH_SIZE, nb_epochs=NB_EPOCHS_DNN, verbose=True)\n",
     "\n",
-    "# Test the model\n",
-    "dnn.test_dnn(X_test, y_test)"
+    "final_error = dnn.test_dnn(X_test, y_test)"
    ]
   },
   {
@@ -149,32 +91,187 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Error rates"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "dnn_pretraining = DNN(config=CONFIG)\n",
+    "dnn_pretraining, losses = dnn_pretraining.pretrain_DNN(X_train, epsilon=EPSILON, batch_size=BATCH_SIZE, nb_epochs=NB_EPOCHS_RBM)\n",
+    "dnn_pretraining, loss = dnn_pretraining.retropropagation(X_train, y_train, epsilon=EPSILON, batch_size=BATCH_SIZE, nb_epochs=NB_EPOCHS_DNN)\n",
+    "\n",
+    "dnn_no_pretraining = DNN(config=CONFIG)\n",
+    "dnn_no_pretraining, loss = dnn_no_pretraining.retropropagation(X_train, y_train, epsilon=EPSILON, batch_size=BATCH_SIZE, nb_epochs=NB_EPOCHS_DNN)\n",
+    "\n",
+    "error_rate_pretraining_train = dnn_pretraining.test_dnn(X_train, y_train, verbose=False)\n",
+    "error_rate_pretraining_test = dnn_pretraining.test_dnn(X_test, y_test, verbose=False)\n",
+    "\n",
+    "error_rate_no_pretraining_train = dnn_no_pretraining.test_dnn(X_train, y_train, verbose=False)\n",
+    "error_rate_no_pretraining_test = dnn_no_pretraining.test_dnn(X_test, y_test, verbose=False)\n",
+    "\n",
+    "print(\"Pretraining model:\")\n",
+    "print(\"Error rate for training set: \", error_rate_pretraining_train)\n",
+    "print(\"Error rate for test set: \", error_rate_pretraining_test)\n",
+    "\n",
+    "print(\"No pretraining model:\")\n",
+    "print(\"Error rate for training set: \", error_rate_no_pretraining_train)\n",
+    "print(\"Error rate for test set: \", error_rate_no_pretraining_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Number of layers"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "configurations = [\n",
+    "    [784, 10],\n",
+    "    [784, 200, 10],\n",
+    "    [784, 200, 200, 10],\n",
+    "    [784, 200, 200, 200, 10],\n",
+    "    [784, 200, 200, 200, 200, 10],\n",
+    "    [784, 200, 200, 200, 200, 200, 10],\n",
+    "]\n",
+    "error_rate_no_pretraining = []\n",
+    "error_rate_pretraining = []\n",
+    "for config in configurations:\n",
+    "    dnn_pretraining = DNN(config=config)\n",
+    "    dnn_pretraining, losses = dnn_pretraining.pretrain_DNN(X_train, epsilon=EPSILON, batch_size=BATCH_SIZE, nb_epochs=NB_EPOCHS_RBM)\n",
+    "    dnn_pretraining, loss = dnn_pretraining.retropropagation(X_train, y_train, epsilon=EPSILON, batch_size=BATCH_SIZE, nb_epochs=NB_EPOCHS_DNN)\n",
+    "    error_rate_pretraining.append(dnn_pretraining.test_dnn(X_test, y_test, verbose=False))\n",
+    "\n",
+    "    dnn_no_pretraining = DNN(config=config)\n",
+    "    dnn_no_pretraining, loss = dnn_no_pretraining.retropropagation(X_train, y_train, epsilon=EPSILON, batch_size=BATCH_SIZE, nb_epochs=NB_EPOCHS_DNN)\n",
+    "    error_rate_no_pretraining.append(dnn_no_pretraining.test_dnn(X_test, y_test, verbose=False))\n",
+    "\n",
+    "plt.figure(figsize=(5, 3))\n",
+    "plt.plot(error_rate_no_pretraining, [2, 3, 4, 5, 6, 7], label='No pretraining')\n",
+    "plt.plot(error_rate_pretraining, [2, 3, 4, 5, 6, 7], label='Pretraining')\n",
+    "plt.title(\"Evolution of the error rate for different number of layers\")\n",
+    "plt.xlabel('Number of layers')\n",
+    "plt.ylabel(\"Error rate\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Number of neurons"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "configurations = [\n",
+    "    [784, 100, 100, 10],\n",
+    "    [784, 200, 200, 10],\n",
+    "    [784, 300, 300, 10],\n",
+    "    [784, 500, 500, 10],\n",
+    "    [784, 700, 700, 10]\n",
+    "]\n",
+    "error_rate_no_pretraining = []\n",
+    "error_rate_pretraining = []\n",
+    "for config in configurations:\n",
+    "    dnn_pretraining = DNN(config=config)\n",
+    "    dnn_pretraining, losses = dnn_pretraining.pretrain_DNN(X_train, epsilon=EPSILON, batch_size=BATCH_SIZE, nb_epochs=NB_EPOCHS_RBM)\n",
+    "    dnn_pretraining, loss = dnn_pretraining.retropropagation(X_train, y_train, epsilon=EPSILON, batch_size=BATCH_SIZE, nb_epochs=NB_EPOCHS_DNN)\n",
+    "    error_rate_pretraining.append(dnn_pretraining.test_dnn(X_test, y_test, verbose=False))\n",
+    "\n",
+    "    dnn_no_pretraining = DNN(config=config)\n",
+    "    dnn_no_pretraining, loss = dnn_no_pretraining.retropropagation(X_train, y_train, epsilon=EPSILON, batch_size=BATCH_SIZE, nb_epochs=NB_EPOCHS_DNN)\n",
+    "    error_rate_no_pretraining.append(dnn_no_pretraining.test_dnn(X_test, y_test, verbose=False))\n",
+    "\n",
+    "plt.figure(figsize=(5, 3))\n",
+    "plt.plot(error_rate_no_pretraining, [100, 200, 300, 500, 700], label='No pretraining')\n",
+    "plt.plot(error_rate_pretraining, [100, 200, 300, 500, 700], label='Pretraining')\n",
+    "plt.title(\"Evolution of the error rate for different number of neurons\")\n",
+    "plt.xlabel('Number of neuros')\n",
+    "plt.ylabel(\"Error rate\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Number of training data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nb_data = [1000, 3000, 7000, 10000 30000, 60000]\n",
+    "CONFIG = [784, 200, 200, 10]\n",
+    "error_rate_no_pretraining = []\n",
+    "error_rate_pretraining = []\n",
+    "for nb in nb_data:\n",
+    "    X_train_sub, y_train_sub = subsample_data_set(X_train, y_train, nb)\n",
+    "    dnn_pretraining = DNN(config=CONFIG)\n",
+    "    dnn_pretraining, losses = dnn_pretraining.pretrain_DNN(X_train_sub, epsilon=EPSILON, batch_size=BATCH_SIZE, nb_epochs=NB_EPOCHS_RBM)\n",
+    "    dnn_pretraining, loss = dnn_pretraining.retropropagation(X_train_sub, y_train_sub, epsilon=EPSILON, batch_size=BATCH_SIZE, nb_epochs=NB_EPOCHS_DNN)\n",
+    "    error_rate_pretraining.append(dnn_pretraining.test_dnn(X_test, y_test, verbose=False))\n",
+    "\n",
+    "    dnn_no_pretraining = DNN(config=CONFIG)\n",
+    "    dnn_no_pretraining, loss = dnn_no_pretraining.retropropagation(X_train_sub, y_train_sub, epsilon=EPSILON, batch_size=BATCH_SIZE, nb_epochs=NB_EPOCHS_DNN)\n",
+    "    error_rate_no_pretraining.append(dnn_no_pretraining.test_dnn(X_test, y_test, verbose=False))\n",
+    "\n",
+    "plt.figure(figsize=(5, 3))\n",
+    "plt.plot(error_rate_no_pretraining, nb_data, label='No pretraining')\n",
+    "plt.plot(error_rate_pretraining, nb_data, label='Pretraining')\n",
+    "plt.title(\"Evolution of the error rate for different len of training set\")\n",
+    "plt.xlabel('Len of training set')\n",
+    "plt.ylabel(\"Error rate\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Conclusion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Best parameters\n",
+    "CONFIG = [784, 100, 10]\n",
+    "BATCH_SIZE = 32\n",
+    "EPSILON = 0.1\n",
+    "NB_EPOCHS_RBM = 100\n",
+    "NB_EPOCHS_DNN = 200\n",
+    "NB_DATA_TRAINING = None\n",
+    "\n",
+    "X_train_sub, y_train_sub = subsample_data_set(X_train, y_train, NB_DATA_TRAINING)\n",
+    "dnn = DNN(config=CONFIG)\n",
+    "dnn, losses = dnn.pretrain_DNN(X_train, epsilon=EPSILON, batch_size=BATCH_SIZE, nb_epochs=NB_EPOCHS_RBM, verbose=True)\n",
+    "dnn, loss = dnn.retropropagation(X_train, y_train, epsilon=EPSILON, batch_size=BATCH_SIZE, nb_epochs=NB_EPOCHS_DNN, verbose=True)\n",
+    "error_rate = dnn.test_dnn(X_test, y_test, verbose=True)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -184,7 +281,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('base')",
+   "display_name": "Python 3.10.9",
    "language": "python",
    "name": "python3"
   },
@@ -198,12 +295,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.9"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "40d3a090f54c6569ab1632332b64b2c03c39dcf918b08424e98f38b5ae0af88f"
+    "hash": "5893de6937453a795d45c7d611a94fe5dba0c9db6e4355aad1e96f1b384ec7f2"
    }
   }
  },
